--- a/kubernetes/apps/kube-system/spegel/ks.yaml
+++ b/kubernetes/apps/kube-system/spegel/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: spegel
 spec:
   interval: 1h
+  targetNamespace: kube-system
   path: ./kubernetes/apps/kube-system/spegel/app
   prune: true
   sourceRef:
