--- a/kubernetes/apps/networking/cloudflared/ks.yaml
+++ b/kubernetes/apps/networking/cloudflared/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: cloudflared
 spec:
   interval: 1h
+  targetNamespace: networking
   dependsOn:
     - name: prometheus-operator-crds
       namespace: observability
