--- a/kubernetes/apps/observability/node-exporter/ks.yaml
+++ b/kubernetes/apps/observability/node-exporter/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: node-exporter
 spec:
   interval: 1h
+  targetNamespace: observability
   dependsOn:
     - name: prometheus-operator-crds
   path: ./kubernetes/apps/observability/node-exporter/app
