--- a/kubernetes/apps/default/calibre-web-automated/ks.yaml
+++ b/kubernetes/apps/default/calibre-web-automated/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: calibre-web-automated
 spec:
   interval: 1h
+  targetNamespace: default
   components:
     - ../../../../components/volsync
     - ../../../../components/gatus/guarded
