--- a/kubernetes/apps/default/cross-seed/ks.yaml
+++ b/kubernetes/apps/default/cross-seed/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: cross-seed
 spec:
   interval: 1h
+  targetNamespace: default
   components:
     - ../../../../components/volsync
   dependsOn:
