--- a/kubernetes/apps/default/glance/ks.yaml
+++ b/kubernetes/apps/default/glance/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: glance
 spec:
   interval: 1h
+  targetNamespace: default
   components:
     - ../../../../components/gatus/guarded
   path: ./kubernetes/apps/default/glance/app
