--- a/kubernetes/apps/default/jellyfin/ks.yaml
+++ b/kubernetes/apps/default/jellyfin/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: jellyfin
 spec:
   interval: 1h
+  targetNamespace: default
   components:
     - ../../../../components/volsync
     - ../../../../components/gatus/guarded
