--- a/kubernetes/apps/default/mosquitto/ks.yaml
+++ b/kubernetes/apps/default/mosquitto/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: mosquitto
 spec:
   interval: 1h
+  targetNamespace: default
   dependsOn:
     - name: rook-ceph-cluster
       namespace: rook-ceph
