--- a/kubernetes/apps/flux-system/flux-instance/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: flux-instance
 spec:
   interval: 1h
+  targetNamespace: flux-system
   dependsOn:
     - name: flux-operator
     - name: cilium
