--- a/kubernetes/apps/kube-system/metrics-server/ks.yaml
+++ b/kubernetes/apps/kube-system/metrics-server/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: metrics-server
 spec:
   interval: 1h
+  targetNamespace: kube-system
   dependsOn:
     - name: prometheus-operator-crds
       namespace: observability
