--- a/kubernetes/apps/kube-system/node-feature-discovery/ks.yaml
+++ b/kubernetes/apps/kube-system/node-feature-discovery/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: node-feature-discovery
 spec:
   interval: 1h
+  targetNamespace: kube-system
   path: ./kubernetes/apps/kube-system/node-feature-discovery/app
   prune: true
   sourceRef:
