--- a/kubernetes/apps/networking/external-dns-cloudflare/ks.yaml
+++ b/kubernetes/apps/networking/external-dns-cloudflare/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: external-dns-cloudflare
 spec:
   interval: 1h
+  targetNamespace: networking
   dependsOn:
     - name: prometheus-operator-crds
       namespace: observability
