--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -4,10 +4,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: networking
 components:
-  - ../../components/namespace
-replacements:
-  - path: ../../components/replacements/ks.yaml
+  - ../../components/alerts
 resources:
+  - ./namespace.yaml
   - ./cloudflared/ks.yaml
   - ./external-dns-cloudflare/ks.yaml
   - ./external-dns-pihole/ks.yaml
