--- a/kubernetes/apps/observability/alloy/ks.yaml
+++ b/kubernetes/apps/observability/alloy/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: alloy
 spec:
   interval: 1h
+  targetNamespace: observability
   components:
     - ../../../../components/gatus/guarded
   dependsOn:
