--- a/kubernetes/apps/observability/gatus/ks.yaml
+++ b/kubernetes/apps/observability/gatus/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: gatus
 spec:
   interval: 1h
+  targetNamespace: observability
   dependsOn:
     - name: rook-ceph-cluster
       namespace: rook-ceph
