--- a/kubernetes/apps/observability/kube-state-metrics/ks.yaml
+++ b/kubernetes/apps/observability/kube-state-metrics/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: kube-state-metrics
 spec:
   interval: 1h
+  targetNamespace: observability
   dependsOn:
     - name: prometheus-operator-crds
   path: ./kubernetes/apps/observability/kube-state-metrics/app
