--- a/kubernetes/apps/observability/loki/ks.yaml
+++ b/kubernetes/apps/observability/loki/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: loki
 spec:
   interval: 1h
+  targetNamespace: observability
   dependsOn:
     - name: openebs
       namespace: openebs
