--- a/kubernetes/apps/observability/smartctl-exporter/ks.yaml
+++ b/kubernetes/apps/observability/smartctl-exporter/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: smartctl-exporter
 spec:
   interval: 1h
+  targetNamespace: observability
   dependsOn:
     - name: prometheus-operator-crds
   path: ./kubernetes/apps/observability/smartctl-exporter/app
