--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/ks.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: system-upgrade-controller
 spec:
   interval: 1h
+  targetNamespace: system-upgrade
   path: ./kubernetes/apps/system-upgrade/system-upgrade-controller/app
   prune: true
   sourceRef:
@@ -21,6 +22,7 @@ metadata:
   name: system-upgrade-controller-plans
 spec:
   interval: 1h
+  targetNamespace: system-upgrade
   dependsOn:
     - name: system-upgrade-controller
   path: ./kubernetes/apps/system-upgrade/system-upgrade-controller/plans
