--- a/kubernetes/apps/volsync-system/volsync/ks.yaml
+++ b/kubernetes/apps/volsync-system/volsync/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   name: volsync
 spec:
   interval: 1h
+  targetNamespace: volsync-system
   dependsOn:
     - name: snapshot-controller
       namespace: kube-system
