--- a/kubernetes/apps/flux-system/flux-instance/app/values.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/values.yaml
@@ -1,8 +1,8 @@
 ---
 instance:
   distribution:
-    # renovate: datasource=github-releases depName=fluxcd/flux2
-    version: 2.7.2
+    artifact: oci://ghcr.io/controlplaneio-fluxcd/flux-operator-manifests:v0.32.0
+    version: 2.x
   components:
     - source-controller
     - kustomize-controller
