--- a/kubernetes/apps/system-upgrade/tuppr/ks.yaml
+++ b/kubernetes/apps/system-upgrade/tuppr/ks.yaml
@@ -3,11 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: system-upgrade-controller
+  name: tuppr
 spec:
   interval: 1h
   targetNamespace: system-upgrade
-  path: ./kubernetes/apps/system-upgrade/system-upgrade-controller/app
+  dependsOn:
+    - name: prometheus-operator-crds
+      namespace: observability
+  path: ./kubernetes/apps/system-upgrade/tuppr/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -19,13 +22,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: system-upgrade-controller-plans
+  name: tuppr-upgrades
 spec:
   interval: 1h
   targetNamespace: system-upgrade
   dependsOn:
-    - name: system-upgrade-controller
-  path: ./kubernetes/apps/system-upgrade/system-upgrade-controller/plans
+    - name: tuppr
+  path: ./kubernetes/apps/system-upgrade/tuppr/upgrades
   prune: true
   sourceRef:
     kind: GitRepository
