--- a/kubernetes/apps/networking/envoy-gateway/app/kustomization.yaml
+++ b/kubernetes/apps/networking/envoy-gateway/app/kustomization.yaml
@@ -4,10 +4,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./helmrelease.yaml
-  - ./helmrepository.yaml
-configMapGenerator:
-  - name: cilium-helm-values
-    files:
-      - values.yaml=./values.yaml
-generatorOptions:
-  disableNameSuffixHash: true
+  - ./ocirepository.yaml
