--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -7,6 +7,7 @@ components:
   - ../../components/alerts
 resources:
   - ./namespace.yaml
+  - ./certificates/ks.yaml
   - ./cloudflared/ks.yaml
   - ./envoy-gateway/ks.yaml
   - ./external-dns-cloudflare/ks.yaml
