chore: migrate from cilium gateway to envoy gateway

--- a/kubernetes/apps/default/glance/ks.yaml
+++ b/kubernetes/apps/default/glance/ks.yaml
@@ -9,6 +9,9 @@ spec:
   targetNamespace: default
   components:
     - ../../../../components/gatus/guarded
+  dependsOn:
+    - name: envoy-gateway
+      namespace: networking
   path: ./kubernetes/apps/default/glance/app
   prune: true
   sourceRef:
