--- a/kubernetes/apps/default/calibre-web-automated/app/helmrelease.yaml
+++ b/kubernetes/apps/default/calibre-web-automated/app/helmrelease.yaml
@@ -40,8 +40,8 @@ spec:
           - "{{ .Release.Name }}.nasenov.dev"
           - cwa.nasenov.dev
         parentRefs:
-          - name: internal
-            namespace: kube-system
+          - name: envoy-internal
+            namespace: networking
 
     persistence:
       config:
