--- a/kubernetes/apps/default/fusion/app/helmrelease.yaml
+++ b/kubernetes/apps/default/fusion/app/helmrelease.yaml
@@ -64,8 +64,8 @@ spec:
           - "{{ .Release.Name }}.nasenov.dev"
           - feeds.nasenov.dev
         parentRefs:
-          - name: internal
-            namespace: kube-system
+          - name: envoy-internal
+            namespace: networking
 
     persistence:
       data:
