--- a/kubernetes/apps/networking/envoy-gateway/app/envoy.yaml
+++ b/kubernetes/apps/networking/envoy-gateway/app/envoy.yaml
@@ -48,14 +48,14 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: envoy-external
-  # annotations:
-  #   external-dns.alpha.kubernetes.io/target: &hostname external.nasenov.dev
+  annotations:
+    external-dns.alpha.kubernetes.io/target: &hostname external.nasenov.dev
 spec:
   gatewayClassName: envoy
   infrastructure:
     annotations:
-      # external-dns.alpha.kubernetes.io/hostname: *hostname
-      lbipam.cilium.io/ips: 192.168.0.44
+      external-dns.alpha.kubernetes.io/hostname: *hostname
+      lbipam.cilium.io/ips: 192.168.0.43
   listeners:
     - name: http
       protocol: HTTP
@@ -80,13 +80,13 @@ kind: Gateway
 metadata:
   name: envoy-internal
   annotations:
-    # external-dns.alpha.kubernetes.io/target: &hostname internal.nasenov.dev
+    external-dns.alpha.kubernetes.io/target: &hostname internal.nasenov.dev
 spec:
   gatewayClassName: envoy
   infrastructure:
     annotations:
-      # external-dns.alpha.kubernetes.io/hostname: *hostname
-      lbipam.cilium.io/ips: 192.168.0.45
+      external-dns.alpha.kubernetes.io/hostname: *hostname
+      lbipam.cilium.io/ips: 192.168.0.40
   listeners:
     - name: http
       protocol: HTTP
