--- a/kubernetes/apps/observability/alloy/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/alloy/app/helmrelease.yaml
@@ -40,8 +40,8 @@ spec:
           hostnames:
             - alloy.nasenov.dev
           parentRefs:
-            - name: internal
-              namespace: kube-system
+            - name: envoy-internal
+              namespace: networking
           rules:
             - backendRefs:
                 - name: alloy
