--- a/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
@@ -15,6 +15,8 @@ spec:
     - name: prometheus-operator-crds
     - name: openebs
       namespace: openebs
+    - name: envoy-gateway
+      namespace: networking
   path: ./kubernetes/apps/observability/kube-prometheus-stack/app
   prune: true
   sourceRef:
