--- a/kubernetes/apps/networking/envoy-gateway/config/envoy.yaml
+++ b/kubernetes/apps/networking/envoy-gateway/config/envoy.yaml
@@ -14,7 +14,7 @@ spec:
       envoyDeployment:
         replicas: 2
         container:
-          image: mirror.gcr.io/envoyproxy/envoy:v1.36.2
+          imageRepository: mirror.gcr.io/envoyproxy/envoy
           resources:
             requests:
               cpu: 100m
@@ -114,6 +114,7 @@ spec:
   compression:
     - type: Brotli
     - type: Gzip
+    - type: Zstd
   connection:
     bufferLimit: 8Mi
   targetSelectors:
@@ -134,11 +135,11 @@ spec:
     xForwardedFor:
       numTrustedHops: 1
   connection:
-    bufferLimit: 4Mi
+    bufferLimit: 8Mi
     maxAcceptPerSocketEvent: 0
   http2:
-    initialStreamWindowSize: 512Ki
-    initialConnectionWindowSize: 8Mi
+    initialStreamWindowSize: 2Mi
+    initialConnectionWindowSize: 32Mi
     onInvalidMessage: TerminateStream
   http3: {}
   targetSelectors:
