chore: rename zigbe2mqtt to zigbee

--- a/kubernetes/apps/default/zigbee/app/externalsecret.yaml
+++ b/kubernetes/apps/default/zigbee/app/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: zigbee2mqtt
+  name: zigbee
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
