--- a/kubernetes/apps/default/zigbee/ks.yaml
+++ b/kubernetes/apps/default/zigbee/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: zigbee2mqtt
+  name: zigbee
 spec:
   interval: 1h
   targetNamespace: default
@@ -19,7 +19,7 @@ spec:
       namespace: external-secrets
     - name: envoy-gateway
       namespace: networking
-  path: ./kubernetes/apps/default/zigbee2mqtt/app
+  path: ./kubernetes/apps/default/zigbee/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -27,4 +27,4 @@ spec:
     namespace: flux-system
   postBuild:
     substitute:
-      APP: zigbee2mqtt
+      APP: zigbee
