--- a/kubernetes/apps/default/glance/app/resources/glance.yml
+++ b/kubernetes/apps/default/glance/app/resources/glance.yml
@@ -105,7 +105,7 @@ pages:
                 url: https://home-assistant.nasenov.dev
                 icon: di:home-assistant.svg
               - title: Zigbee2mqtt
-                url: https://zigbee2mqtt.nasenov.dev
+                url: https://zigbee.nasenov.dev
                 icon: di:zigbee2mqtt.svg
               - title: n8n
                 url: https://n8n.nasenov.dev
