chore: schedule generic device plugin only on zigbee controller node

--- a/kubernetes/apps/kube-system/generic-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/generic-device-plugin/app/helmrelease.yaml
@@ -16,6 +16,14 @@ spec:
         strategy: RollingUpdate
         pod:
           priorityClassName: system-node-critical
+          affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                  - matchExpressions:
+                      - key: feature.node.kubernetes.io/usb-ff_10c4_ea60.present
+                        operator: In
+                        values: ["true"]
         containers:
           app:
             image:
