--- a/kubernetes/apps/kube-system/generic-device-plugin/ks.yaml
+++ b/kubernetes/apps/kube-system/generic-device-plugin/ks.yaml
@@ -7,6 +7,8 @@ metadata:
 spec:
   interval: 1h
   targetNamespace: kube-system
+  dependsOn:
+    - name: node-feature-discovery
   path: ./kubernetes/apps/kube-system/generic-device-plugin/app
   prune: true
   sourceRef:
