--- a/kubernetes/apps/observability/gatus/app/resources/config.yaml
+++ b/kubernetes/apps/observability/gatus/app/resources/config.yaml
@@ -16,7 +16,7 @@ connectivity:
 endpoints:
   - name: flux-webhook
     group: external
-    url: https://flux-webook.nasenov.dev
+    url: https://flux-webook.nasenov.dev/
     conditions:
       - "[STATUS] == 404"
     client:
