--- a/kubernetes/apps/observability/gatus/app/resources/config.yaml
+++ b/kubernetes/apps/observability/gatus/app/resources/config.yaml
@@ -16,22 +16,20 @@ connectivity:
 endpoints:
   - name: flux-webhook
     group: external
-    url: https://flux-webook.nasenov.dev/
-    interval: 1m
-    client:
-      dns-resolver: "tcp://1.1.1.1:53"
+    url: https://flux-webook.nasenov.dev
     conditions:
-      - "[STATUS] == 404"
-    # alerts:
-    #   - type: discord
+      - "[CONNECTED] == true"
+    client:
+      dns-resolver: tcp://1.1.1.1:53
+    alerts:
+      - type: discord
   - name: kromgo
     group: external
     url: https://kromgo.nasenov.dev/talos_version
-    interval: 1m
-    client:
-      dns-resolver: "tcp://1.1.1.1:53"
     conditions:
       - "[STATUS] == 200"
+    client:
+      dns-resolver: tcp://1.1.1.1:53
     alerts:
       - type: discord
   - name: actual
