chore: update gatus config

--- a/kubernetes/apps/observability/gatus/app/resources/config.yaml
+++ b/kubernetes/apps/observability/gatus/app/resources/config.yaml
@@ -18,7 +18,7 @@ endpoints:
     group: external
     url: https://flux-webhook.nasenov.dev
     conditions:
-      - "[CONNECTED] == true"
+      - "[STATUS] == 404"
     client:
       dns-resolver: tcp://1.1.1.1:53
     alerts:
