chore: add external secrets webhook pdb

--- a/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
@@ -31,6 +31,8 @@ spec:
 
     webhook:
       replicaCount: 2
+      podDisruptionBudget:
+        enabled: true
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
