chore: enable k8s api server anonymous auth

--- a/terraform/kubernetes/resources/config.yaml
+++ b/terraform/kubernetes/resources/config.yaml
@@ -55,6 +55,7 @@ cluster:
   apiServer:
     extraArgs:
       feature-gates: ImageVolume=true
+      anonymous-auth: "true" # https://github.com/siderolabs/talos/issues/11324
     disablePodSecurityPolicy: true
     resources:
       requests:
