--- a/kubernetes/apps/networking/external-dns-pihole/dnsendpoint/dnsendpoint.yaml
+++ b/kubernetes/apps/networking/external-dns-pihole/dnsendpoint/dnsendpoint.yaml
@@ -58,3 +58,15 @@ spec:
       recordType: A
       targets:
         - 192.168.0.15
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/externaldns.k8s.io/dnsendpoint_v1alpha1.json
+apiVersion: externaldns.k8s.io/v1alpha1
+kind: DNSEndpoint
+metadata:
+  name: k8s
+spec:
+  endpoints:
+    - dnsName: k8s.nasenov.dev
+      recordType: A
+      targets:
+        - 192.168.0.20
