--- a/kubernetes/apps/observability/gatus/app/resources/config.yaml
+++ b/kubernetes/apps/observability/gatus/app/resources/config.yaml
@@ -207,7 +207,7 @@ endpoints:
       - type: discord
   - name: db
     group: infrastructure
-    url: tcp://192.168.0.42:5432
+    url: tcp://db.nasenov.dev:5432
     conditions:
       - "[CONNECTED] == true"
     alerts:
