--- a/docker/truenas/pihole/compose.yaml
+++ b/docker/truenas/pihole/compose.yaml
@@ -4,10 +4,6 @@ services:
     container_name: pihole
     image: ghcr.io/pi-hole/pihole:2025.11.0
     restart: unless-stopped
-    ports:
-      - "80:80/tcp"
-      - "53:53/tcp"
-      - "53:53/udp"
     environment:
       TZ: Europe/Sofia
       FTLCONF_dns_listeningMode: all
@@ -15,12 +11,26 @@ services:
       WEBPASSWORD_FILE: pi_hole_admin_password
     secrets:
       - pi_hole_admin_password
+    networks:
+      pihole:
+        ipv4_address: 192.168.0.53
     volumes:
       - pihole:/etc/pihole
 
 secrets:
   pi_hole_admin_password:
-    file: pi_hole_admin_password
+    file: /mnt/apps/pihole/pi_hole_admin_password
+
+networks:
+  pihole:
+    driver: macvlan
+    driver_opts:
+      parent: ens18
+    ipam:
+      config:
+        - subnet: 192.168.0.0/24
+          gateway: 192.168.0.1
+          ip_range: 192.168.0.53/32
 
 volumes:
   pihole:
