--- a/kubernetes/apps/openebs/openebs/app/helmrelease.yaml
+++ b/kubernetes/apps/openebs/openebs/app/helmrelease.yaml
@@ -6,13 +6,9 @@ metadata:
   name: openebs
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: openebs
-      version: 4.4.0
-      sourceRef:
-        kind: HelmRepository
-        name: openebs
+  chartRef:
+    kind: OCIRepository
+    name: openebs
   values:
     openebs-crds:
       csi:
