chore: migrate postgres local backup to garage

--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/externalsecret.yaml
@@ -13,19 +13,19 @@ spec:
       data:
         s3.conf: |
           [global]
-          repo1-s3-key={{ .MINIO_ROOT_USER }}
-          repo1-s3-key-secret={{ .MINIO_ROOT_PASSWORD }}
+          repo1-s3-key={{ .POSTGRESQL_GARAGE_ACCESS_KEY }}
+          repo1-s3-key-secret={{ .POSTGRESQL_GARAGE_ACCESS_KEY_SECRET }}
           repo1-cipher-pass={{ .POSTGRESQL_BACKUP_ENCRYPTION_CIPHER_PASS }}
           repo2-s3-key={{ .POSTGRESQL_R2_ACCESS_KEY }}
           repo2-s3-key-secret={{ .POSTGRESQL_R2_ACCESS_KEY_SECRET }}
           repo2-cipher-pass={{ .POSTGRESQL_BACKUP_ENCRYPTION_CIPHER_PASS }}
   data:
-    - secretKey: MINIO_ROOT_USER
+    - secretKey: POSTGRESQL_GARAGE_ACCESS_KEY
       remoteRef:
-        key: 59d89a3f-17f6-469a-9a71-b27c0152be1c
-    - secretKey: MINIO_ROOT_PASSWORD
+        key: 43f2d5e8-52f6-4aa5-9776-b39d00ec1865
+    - secretKey: POSTGRESQL_GARAGE_ACCESS_KEY_SECRET
       remoteRef:
-        key: 38b90ebd-4c54-464c-9fe0-b27c0152cadb
+        key: 3f19d6de-bce5-4134-891a-b39d00ec38d0
     - secretKey: POSTGRESQL_BACKUP_ENCRYPTION_CIPHER_PASS
       remoteRef:
         key: 4e4fa1a8-1f23-484a-84a0-b2b400c22ccd
