--- a/kubernetes/components/volsync/local/externalsecret.yaml
+++ b/kubernetes/components/volsync/local/externalsecret.yaml
@@ -11,20 +11,20 @@ spec:
   target:
     template:
       data:
-        RESTIC_REPOSITORY: "{{ .VOLSYNC_RESTIC_REPOSITORY }}/${APP}"
+        RESTIC_REPOSITORY: "{{ .VOLSYNC_GARAGE_ENDPOINT }}/${APP}"
         RESTIC_PASSWORD: "{{ .VOLSYNC_RESTIC_PASSWORD }}"
-        AWS_ACCESS_KEY_ID: "{{ .VOLSYNC_AWS_ACCESS_KEY_ID }}"
-        AWS_SECRET_ACCESS_KEY: "{{ .VOLSYNC_AWS_SECRET_ACCESS_KEY }}"
+        AWS_ACCESS_KEY_ID: "{{ .VOLSYNC_GARAGE_ACCESS_KEY }}"
+        AWS_SECRET_ACCESS_KEY: "{{ .VOLSYNC_GARAGE_ACCESS_KEY_SECRET }}"
   data:
-    - secretKey: VOLSYNC_RESTIC_REPOSITORY
+    - secretKey: VOLSYNC_GARAGE_ENDPOINT
       remoteRef:
         key: 9939113a-7c2f-41d9-bb14-b27c01539722
     - secretKey: VOLSYNC_RESTIC_PASSWORD
       remoteRef:
         key: ff1f55f8-b6a8-4b3d-8ad6-b27c0153b42b
-    - secretKey: VOLSYNC_AWS_ACCESS_KEY_ID
+    - secretKey: VOLSYNC_GARAGE_ACCESS_KEY
       remoteRef:
         key: de10e468-aea0-45ce-abf1-b27c0153cb17
-    - secretKey: VOLSYNC_AWS_SECRET_ACCESS_KEY
+    - secretKey: VOLSYNC_GARAGE_ACCESS_KEY_SECRET
       remoteRef:
         key: ef88169f-3984-453d-a4b4-b27c0153df9d
